Fixes display filters on mobile

--- a/app/assets/stylesheets/layouts/shared/l-content-switch.scss
+++ b/app/assets/stylesheets/layouts/shared/l-content-switch.scss
@@ -82,6 +82,8 @@
       }
 
       .c-demographic-filters {
+        display: flex;
+
         .demographic-item {
           display: block;
 
